--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>星露谷物语存档迁移工具</title>
+    <title>星露谷物语主机迁移工具</title>
   </head>
   <body>
     <div id="app"></div>
